--- a/provision_resources.yml
+++ b/provision_resources.yml
@@ -24,7 +24,7 @@
       when: create_key.changed
 
    # VPC or Virtual Private Cloud.  The instance will be tied to a subnet that belongs to this particular VPC
-    - name: Create AWS VPC AWS-REINVENT-vpc
+    - name: Create AWS VPC aws-reinvent-vpc
       ec2_vpc_net:
         name: "aws-reinvent-vpc"
         cidr_block: "192.168.0.0/24"
@@ -32,8 +32,16 @@
           Demo: aws reinvent
       register: create_vpc
 
+    # Saving the VPC-Subnet-ID to use for later since this is auto-generated
+    - name: Save vpc_subnet_id to file
+      lineinfile:
+        path: "{{playbook_dir}}/resources.yml"
+        regexp: "^vpc_id:"
+        line: "vpc_id: {{create_vpc.vpc.id}}"
+        create: yes
+
     # If a secruity group is not created, instances will be tied to the Default secruity grouop that allows all traffic (non-secure)
-    - name: Create EC2 security group AWS-REINVENT-SG
+    - name: Create EC2 security group aws-reinvent-sg
       ec2_group:
         name: "aws-reinvent-sg"
         description: AWS reinvent SG for the demo
@@ -47,7 +55,7 @@
             cidr_ip: 0.0.0.0/0
 
     # This task is subdiving up the 192.168.0.0/24 and getting a smaller chunk, a /28
-    - name: Create subnet for AWS-REINVENT-vpc
+    - name: Create subnet for aws-reinvent-vpc
       ec2_vpc_subnet:
         vpc_id: "{{create_vpc.vpc.id}}"
         cidr: "192.168.0.0/28"
@@ -65,7 +73,7 @@
         create: yes
 
     # Create Internet Gateway and attach it to VPC.  This allows instances on this VPC to reach the Internet
-    - name: create vpc internet gateway for AWS-REINVENT-vpc
+    - name: create vpc internet gateway for aws-reinvent-vpc
       ec2_vpc_igw:
         vpc_id: "{{ create_vpc.vpc.id }}"
         tags:
