--- a/tower/teardown.yml
+++ b/tower/teardown.yml
@@ -12,7 +12,7 @@
     - name: Destroy EC2 TEST_INSTANCE
       ec2:
         state: absent
-        instance_id: "{{instance_id}}"
+        instance_id: "{{ec2_id}}"
 
 - name: AWS PLAYBOOK TEARDOWN RESOURCES
   connection: local
