--- a/tower/provision_resources.yml
+++ b/tower/provision_resources.yml
@@ -6,7 +6,7 @@
   # The paramater region will be set for all ec2 modules by specifying it here under module_defaults
   module_defaults:
     group/aws:
-      region: {{ aws_region | default("us-west-2") }}
+      region: "{{ aws_region | default('us-west-2') }}"
 
   tasks:
     # It is possible to use a pre-existing key-pair, this is done just for simplicity
