--- a/tower/provision_resources.yml
+++ b/tower/provision_resources.yml
@@ -15,36 +15,13 @@
         name: "aws-reinvent-key"
       register: create_key
 
-    - name: get the username running the deploy
-      local_action: command whoami
-      register: username_on_the_host
-
-    - debug: var=username_on_the_host
-    # # This is just saving off the private key, this can only be done 1 time on the first creation of the key, pair
-    # - name: save private key
-    #   copy:
-    #     content: "{{ create_key.key.private_key }}"
-    #     dest: "/var/lib/awx/.ssh/aws-reinvent-private.pem"
-    #     mode: '0400'
-    #   when: create_key.changed
-
-    # - name: update SSH key with latest
-    #   tower_credential:
-    #     name: AWS_DEMO_INSTANCES_KEY
-    #     organization: Default
-    #     tower_host: https://localhost
-    #     tower_username: admin
-    #     tower_password: ansible
-    #     kind: ssh
-    #     ssh_key_data: "/var/lib/awx/.ssh/aws-reinvent-private.pem"
-    #   delegate_to: localhost
-    #   run_once: true
-
-    - debug: var=create_key
-
-    - debug: var=create_key.key
-
-    - debug: var=create_key.key.private_key
+    #This is just saving off the private key, this can only be done 1 time on the first creation of the key, pair
+    - name: save private key
+      copy:
+        content: "{{ create_key.key.private_key }}"
+        dest: "{{playbook_dir}}/aws-reinvent-private.pem"
+        mode: '0400'
+      when: create_key.changed
 
     - name: update SSH key with latest
       tower_credential:
@@ -54,9 +31,14 @@
         tower_username: admin
         tower_password: ansible
         kind: ssh
-        ssh_key_data: "{{ create_key['key']['private_key'] }}"
+        ssh_key_data: "{{playbook_dir}}/aws-reinvent-private.pem"
       delegate_to: localhost
       run_once: true
+
+    - name: delete flat-file private key
+      file:
+        path: "{{playbook_dir}}/aws-reinvent-private.pem"
+        state: absent
 
    # VPC or Virtual Private Cloud.  The instance will be tied to a subnet that belongs to this particular VPC
     - name: Create AWS VPC aws-reinvent-vpc
