--- a/vSRX/engine/ansible.cfg
+++ b/vSRX/engine/ansible.cfg
@@ -2,3 +2,4 @@
 retry_files_enabled = False
 inventory      = demo.aws_ec2.yml
 private_key_file = aws-reinvent-private.pem
+callback_whitelist = profile_tasks
