--- a/RHEL/provision_rhel.yml
+++ b/RHEL/provision_rhel.yml
@@ -6,7 +6,7 @@
   # The paramater region will be set for all ec2 modules by specifying it here under module_defaults
   module_defaults:
     group/aws:
-      region: "{{ your_region | default('us-west-2') }}"
+      region: "{{ your_region | default('us-east-1') }}"
   vars:
     instance_name: "TEST_INSTANCE"
     owner_tag: "unknown"
