--- a/RHEL/provision_resources.yml
+++ b/RHEL/provision_resources.yml
@@ -10,14 +10,12 @@
     name: AWS_DEMO_INSTANCES_KEY
     organization: Default
     credential_type: Machine
-    controller_host: "https://localhost"
+    controller_host: "https://{{ ansible_host }}"
     controller_username: admin
     controller_password: "sean>colin"
     validate_certs: false
     inputs:
       ssh_key_data: "{{ create_key.key.private_key }}"
-  delegate_to: localhost
-  run_once: true
   when: create_key.changed
 
 - name: delete flat-file private key
