--- a/RHEL/teardown.yml
+++ b/RHEL/teardown.yml
@@ -4,34 +4,39 @@
   hosts: localhost
   gather_facts: false
   # The paramater region will be set for all ec2 modules by specifying it here under module_defaults
-  module_defaults:
-    group/aws:
-      region: "{{ aws_region | default('us-west-1') }}"
+  vars:
+    instance_name: "TEST_INSTANCE"
+    owner_tag: "unknown"
+    ec2_region: "{{ your_region | default('us-east-1') }}"
 
   tasks:
     - name: grab facts for TEST_INSTANCE
       ec2_instance_facts:
+        region: "{{ ec2_region }}"
         filters:
-          "tag:Name": "TEST_INSTANCE"
+          "tag:Name": "{{ instance_name }}"
       register: TEST_INSTANCE
 
     - name: destroy EC2 instances
       ec2:
         state: absent
+        region: "{{ ec2_region }}"
         instance_ids: "{{ TEST_INSTANCE.instances | map(attribute='instance_id') | list }}"
       register: result
       when: TEST_INSTANCE.instances
 
     - name: Get the VPC ID
       ec2_vpc_net_facts:
+        region: "{{ ec2_region }}"
         filters:
           "tag:Name": "aws-demo-sg"
       register: vpc_net_facts
 
     - name: Deleted EC2 security group for  aws-demo-vpc
       ec2_group:
+        region: "{{ ec2_region }}"
         name: "aws-demo-sg"
-        vpc_id: "{{vpc_net_facts.vpcs[0].id}}"
+        vpc_id: "{{ vpc_net_facts.vpcs[0].id }}"
         state: absent
       register: delete_sg
       until: delete_sg is not failed
@@ -42,6 +47,7 @@
 
     - name: Delete subnet for aws-demo-vpc
       ec2_vpc_subnet:
+        region: "{{ ec2_region }}"
         vpc_id: "{{vpc_net_facts.vpcs[0].id}}"
         cidr: "192.168.0.0/28"
         state: absent
@@ -51,6 +57,7 @@
 
     - name: vpc internet gateway is deleted for aws-demo-vpc
       ec2_vpc_igw:
+        region: "{{ ec2_region }}"
         vpc_id: "{{vpc_net_facts.vpcs[0].id}}"
         state: absent
       delegate_to: localhost
@@ -59,6 +66,7 @@
 
     - name: grab route information for aws-demo-vpc
       ec2_vpc_route_table_facts:
+        region: "{{ ec2_region }}"
         filters:
           vpc_id: "{{vpc_net_facts.vpcs[0].id}}"
       register: route_table_facts
@@ -68,6 +76,7 @@
 
     - name: vpc public subnet route table is deleted
       ec2_vpc_route_table:
+        region: "{{ ec2_region }}"
         vpc_id: "{{vpc_net_facts.vpcs[0].id}}"
         state: absent
         route_table_id: "{{item.id}}"
@@ -81,6 +90,7 @@
     - name: Delete AWS VPC aws-demo-vpc
       ec2_vpc_net:
         name: "aws-demo-vpc"
+        region: "{{ ec2_region }}"
         cidr_block: "192.168.0.0/24"
         state: absent
       register: delete_vpc
@@ -92,6 +102,7 @@
 
     - name: remove ssh key pair
       ec2_key:
+        region: "{{ ec2_region }}"        
         name: "aws-demo-key"
         state: absent
       register: create_key
