--- a/RHEL/teardown.yml
+++ b/RHEL/teardown.yml
@@ -11,7 +11,7 @@
 
   tasks:
     - name: grab facts for TEST_INSTANCE
-      ec2_instance_facts:
+      amazon.aws.ec2_vpc_net_info:
         region: "{{ ec2_region }}"
         filters:
           "tag:Name": "{{ instance_name }}"
@@ -26,10 +26,10 @@
       when: TEST_INSTANCE.instances
 
     - name: Get the VPC ID
-      ec2_vpc_net_facts:
+      amazon.aws.ec2_vpc_net_info:
         region: "{{ ec2_region }}"
         filters:
-          "tag:Name": "aws-demo-sg"
+          "tag:Name": "aws-demo-vpc"
       register: vpc_net_facts
 
     - name: Deleted EC2 security group for  aws-demo-vpc
