--- a/RHEL/teardown.yml
+++ b/RHEL/teardown.yml
@@ -13,7 +13,7 @@
 
   tasks:
     - name: grab facts for TEST_INSTANCE
-      amazon.aws.ec2_instance_info:
+      ec2_instance_info:
         filters:
           "tag:Name": "TEST_INSTANCE"
       register: TEST_INSTANCE
