--- a/RHEL/teardown.yml
+++ b/RHEL/teardown.yml
@@ -6,7 +6,7 @@
   # The paramater region will be set for all ec2 modules by specifying it here under module_defaults
   module_defaults:
     group/aws:
-      region: "{{ your_region | default('us-west-1') }}"
+      region: "{{ your_region | default('us-east-1') }}"
   vars:
     instance_name: "TEST_INSTANCE"
     owner_tag: "unknown"
@@ -29,7 +29,6 @@
 
     - name: Get the VPC ID
       amazon.aws.ec2_vpc_net_info:
-        region: "{{ your_region }}"
         filters:
           "tag:Name": "aws-demo-vpc"
       register: vpc_net_facts
