--- a/RHEL/teardown.yml
+++ b/RHEL/teardown.yml
@@ -28,7 +28,7 @@
         - TEST_INSTANCE.instances
 
     - name: Get the VPC ID
-      amazon.aws.ec2_vpc_net_info:
+      ec2_vpc_net_info:
         filters:
           "tag:Name": "aws-demo-vpc"
       register: vpc_net_facts
