--- a/1dRHEL/1dwf1-Create-ssh-key-pair.yml
+++ b/1dRHEL/1dwf1-Create-ssh-key-pair.yml
@@ -1,21 +1,24 @@
+# code: language=ansible
 ---
-# It is possible to use a pre-existing key-pair, this is done just for simplicity
-- name: Create ssh key pair
-  amazon.aws.ec2_key:
-    region: "{{ ec2_region }}"
-    name: "aws-demo1-key"
-  register: create_key
+- name: Play to Create the SSH key pair and machine credentials in Ansible controller
+  hosts: localhost
+  tasks:
+    # It is possible to use a pre-existing key-pair, this is done just for simplicity
+    - name: Create ssh key pair
+      amazon.aws.ec2_key:
+        region: "{{ ec2_region }}"
+        name: "aws-demo1-key"
+      register: create_key
 
-- name: update SSH key with latest
-  become: true
-  ansible.controller.credential:
-    name: AWS_Demo1_Instance_key
-    organization: Default
-    credential_type: Machine
-    # controller_username: "{{ controller_username }}"
-    # controller_password: "{{ controller_password }}"
-    # controller_host: "{{ controller_host }}"
-    validate_certs: false
-    inputs:
-      ssh_key_data: "{{ create_key.key.private_key }}"
-  when: create_key.changed
+    - name: Update SSH key with latest
+      ansible.controller.credential:
+        name: AWS_Demo1_Instance_key
+        organization: Default
+        credential_type: Machine
+        # controller_username: "{{ controller_username }}"
+        # controller_password: "{{ controller_password }}"
+        # controller_host: "{{ controller_host }}"
+        validate_certs: false
+        inputs:
+          ssh_key_data: "{{ create_key.key.private_key }}"
+      when: create_key.changed
